# dwapcbc-system

./: .gitignore  DWAPCBC安装指南.md  DWAPCBC算法改进方向与研究.md  MANIFEST.in  PROJECT_SUMMARY.md  README.md  USAGE_GUIDE.md  example_client.py  pyproject.toml  quickstart.sh  requirements.txt  setup.py
backend/: cli.py  dijkstra.py  dwapcbc.py
backend/batch_results/: summary.txt  test_results.csv
backend/scenarios/: example3.json
dwapcbc/: __init__.py  app.py  batch_test.py  bezier_curve.py  dwapcbc.py  path_optimizer.py
dwapcbc/scenarios/: example1.json  example2.json
